2009-01-28  Scott James Remnant  <scott@netsplit.com>

	* init/control.h: Change nih/dbus.h include to nih-dbus/dbus_message.h
	and include the actual D-Bus header
	* init/control.c: Change nih/dbus.h include to error, connection,
	message and object includes.

	* init/blocked.h: Change nih/dbus.h include to nih-dbus/dbus_message.h
	* init/blocked.c: Change nih/dbus.h include to nih-dbus/dbus_message.h

2009-01-27  Scott James Remnant  <scott@netsplit.com>

	* init/Makefile.am: Update paths to libnih-dbus dependencies.

2009-01-26  Scott James Remnant  <scott@netsplit.com>

	* configure.ac (AC_CONFIG_FILES): Add nih-dbus sub-directory
	* Makefile.am (SUBDIRS): Add nih-dbus sub-directory

	* configure.ac: Bump copyright to 2009

	* configure.ac: Matching libnih, we now mandate libtool 2.2.x
	* HACKING: Update dependency requirement to 2.2.4

	* init/init.supp: Adjust suppression for glibc 2.8

	* init/tests/test_event.c (test_finished): Remove erroneous test
	of free'd memory.

	* configure.ac: Bump version to 0.5.1

	* init/tests/test_event_operator.c (test_operator_handle): Add a
	test for duplicate events when already matched.
	* init/event_operator.c (event_operator_handle): Skip if already
	matched.

	* README: Update features and requirements.
	* NEWS: Copy in news from 0.5.0; that release doesn't appear in
	this ChangeLog since it was made on a separate branch.

2009-01-26  Casey Dahlin  <cdahlin@redhat.com>

	* init/environ.c (environ_expand_until): Handle the implicit case
	of the gap in the string being the same size of the value.

	* init/job_process.c (job_process_handler): Handle the case of a
	child being continued by a signal, otherwise we'll assert.

	* init/job_process.c (job_process_run): Double-check that the
	newline(s) we see are at the end of the script before stripping,
	since we can fall through if the newline is mid-script but /dev/fd
	isn't mounted.

2008-07-05  Scott James Remnant  <scott@netsplit.com>

	* TODO: Update.
