@@ -1,5 +1,10 @@
 2009-01-28  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.h: Change nih/dbus.h include to nih-dbus/dbus_message.h
+	and include the actual D-Bus header
+	* init/job.c: Change nih/dbus.h include to error, message, object
+	and util.
+
 	* init/control.h: Change nih/dbus.h include to nih-dbus/dbus_message.h
 	and include the actual D-Bus header
 	* init/control.c: Change nih/dbus.h include to error, connection,
